--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,19 +1,33 @@
 body {
-    background: #eee;
+    background: #000;
     text-align: center;
     padding: 0 25px;
     font-family: arial, sans-serif;
 }
 
-#main, #chats, fieldset {
+#main, #chats {
     width: 500px;
     margin: auto;
     text-align: left;
     background: white;
     padding: 50px 60px;
     border: solid #ddd;
-    border-width: 0 1px 1px 1px;
+    border-width: 0px 1px 1px 1px;
 }
+
+#input {
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    background: white;
+    padding: 20px 60px;
+    border: solid #ddd;
+    border-width: 0px 1px 1px 1px;
+}
+
 
 #main h1 {
     margin-top: 0;
@@ -60,6 +74,7 @@ form input[type=text] {
 }
 
 .chat {
+    color: #12e603;
     padding: 5px;
     margin-bottom: 5px;
     background-color: #eee;
