--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -88,6 +88,15 @@ form input[type=text] {
     background-color: #ddd;
 }
 
+button:hover {
+    cursor: pointer;
+} 
+
+.username:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .spinner {
     float: right;
     height: 46px;
