--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -15,7 +15,7 @@ body {
     border-width: 0px 1px 1px 1px;
 }
 
-#input {
+#send {
     width: 500px;
     margin-left: auto;
     margin-right: auto;
@@ -27,7 +27,6 @@ body {
     border: solid #ddd;
     border-width: 0px 1px 1px 1px;
 }
-
 
 #main h1 {
     margin-top: 0;
@@ -90,7 +89,7 @@ form input[type=text] {
 
 button:hover {
     cursor: pointer;
-} 
+}
 
 .username:hover {
     cursor: pointer;
@@ -98,7 +97,7 @@ button:hover {
 }
 
 .spinner {
-    float: right;
+    /*float: right;*/
     height: 46px;
     margin-bottom: 5px;
 }
@@ -111,4 +110,3 @@ button:hover {
     color: #fff;
     background-color: #0090da;
 }
-
